# yawot-src

./: CMakeLists.txt  README.md  version.cpp  yawot.version
api/yawot/: version.h  yawotsharedobject.h
configure/: version.in.h
